alignment of selected line-need to be fixed

--- a/styles/basics/helpers.css
+++ b/styles/basics/helpers.css
@@ -50,6 +50,10 @@ canvas {
   border: 1px solid gray;
 }
 
-.hidden {
+.meme-editor.hidden {
+  display: none;
+}
+
+.gallery-user-tool.hidden {
   display: none;
 }
